--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/pseudotsuga-401-advanced-javascript/data-structures-and-algorithms#readme",
   "dependencies": {
     "eslint": "^6.8.0",
-    "jest": "^24.9.0"
+    "jest": "^24.9.0",
+    "jsdocs": "^1.0.0"
   }
 }
